# RetroChem

./: .copier-answers.yml  LICENSE  LICENSE-APACHE.txt  NOTICE  README.md  env.yml  env_mac.yml  env_windows.yml  pyproject.toml  report.ipynb  retrochem_app.py  tox.ini
.streamlit/: config.toml
docs/source/: conf.py
src/retrochem/: __init__.py  app.py  datamol.db  epfl_student.db  functions.py  parsing_database.py  preliminary_functions.py  reaction_database.py  test.db  test.db.db
tests/: env.yml  test_example_module.py  test_preliminary_functions.py  test_reaction_database.py  testfunctions.py
​.streamlit/: config.toml
